--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           ip: data.ip
         };
 
-        fetch("https://script.google.com/macros/s/AKfycbw9eJq4KViktjVWHbyhB4Pr0hkcm4V-9ABayBgi-e2hdUWXfPBUfeeILvcn5rISFKZ7/exec", {
+        fetch("https://script.google.com/macros/s/AKfycbw9eJq4KViktjVWHbyhB4Pr0hkcm4V-9ABayBgi-e2hdUWXfPBUfeelLvcn5rISFKZ7/exec
+                                                                                     ↑
+", {
           method: "POST",
           body: JSON.stringify(payload),
           headers: {
